# AnalogCircuitDSP_Lib

./: CMakeLists.txt  Circuit.h  Component.h  HighPassRCFilterCircuit.py  LowPassRCFilterCircuit.py  Main.py  README.md  Readme.txt  circuit.py  gitignore  main.cpp  main.py  solver.py
circuit_solver/: Circuit.cpp  Circuit.h  MnaSolver.cpp  Subcircuit.py  circuit.py  mna_solver.h  mna_solver.py  solver.py
circuit_solver/subcircuits/: Subcircuit.cpp  Subcircuit.h
circuits/: DiodeBridgeCircuit.py  DiodeBridgeCompressorSidechain.cpp  DiodeBridgeCompressorSidechain.h  FETCompressorCircuit.cpp  FETCompressorCircuit.h  FETCompressorCircuit.py  HighShelfCircuit.h  HighShelfCircuit.py  InputTransformerCircuit.cpp  InputTransformerCircuit.h  InputTransformerCircuit.py  LowShelfCircuit.cpp  LowShelfCircuit.h  LowShelfCircuit.py  MultipleFeedbackBandPassCircuit.py  OpticalCompressionCellCircuit.py  OutputTransformerCircuit.py  SallenKeyBandPassCircuit.py  SallenKeyHighPassCircuit.py  SallenKeyLowPassCircuit.py  TubePowerAmpCircuit.py  TubePreampCircuit.py  TwinTNotchCircuit.py  VCACircuit.py  VariMuCircuit.py  analog_buffer.py  bass_enhancer.py  bjt_class_a_preamp.py  bjt_push_pull_amp.py  delay_with_feedback.py  diode_clipper.py  gain_stage.py  jfet_class_a_preamp.py  mosfet_class_a_preamp.py  mosfet_harmonic_exciter.py  pentode_harmonic_exciter.py  pentode_saturator.py  transient_detector.py  triode_bass_enhancer.py  triode_harmonic_exciter.py  (+1 more)
components/:  File: RectifierTube.h   SpeakerDriver.h  AnalogInputStage.cpp  AnalogInputStage.h  AnalogOutputStage.cpp  AnalogOutputStage.h  Analog_stage_input.py  Analog_stage_output.cpp  Analog_stage_output.py  Attenuator.cpp  BTJ.cpp  BTJ.h  Cabinet_bass_reflex.cpp  Capacitor.cpp  Capacitor.h  Capacitor.py  CloseBoxCabinet.cpp  CloseBoxCabinet.h  Component.cpp  Component.h  CurrentSource.cpp  CurrentSource.h  Current_source.py  Diode.cpp  Diode.h  Diode.py  DynamicMicrophone.cpp  FETCompressorCircuit.py  File: ZenerDiode.cpp  Inductor.cpp  Inductor.h  JFET.cpp  JFET.h  LDR.cpp  LDR.h  Led.cpp  Led.h  Led.py  MOSFET.cpp  MOSFET.h  (+66 more)
utils/: Digital_converter  Logger.cpp  Logger.h  PluginScaffolder.cpp  PluginScaffolder.h  Random.cpp  Random.h  constants.py  helpers.py  microphone_utility.py  ngspice_lib_parser.py  physical_quantities.py  speaker_cabinet_utility.py  speaker_group_utility.py
utils/PluginScaffolderUtility/: main.cpp
utils/PluginScaffolderUtility/Utils/: PluginScaffolder.h
utils/physical_quantities/: Current.cpp  Current.h  PhysicalQuantity.cpp  PhysicalQuantity.h  Power.cpp  Power.h  Voltage.cpp  Voltage.h
